--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --exec babel-node src/app.js",
     "lint": "eslint ."
-    
-
   },
   "repository": {
     "type": "git",
@@ -22,8 +20,11 @@
   },
   "homepage": "https://github.com/damzylance/ecommerce#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12"
   },
   "devDependencies": {
